Fix wireframe cube jumping issue and make it 2x larger (400px)

--- a/src/App.css
+++ b/src/App.css
@@ -257,8 +257,8 @@ body {
 /* Wireframe Cube */
 .wireframe-cube {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   opacity: 0;
   transform: translate(-50%, -50%) scale(0.8);
   transition: all 1s ease-out;
